<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Stock Insider</string>
    <string name="locale_en_US">en-US</string>
    <string name="app_time_zone">America/Chicago</string>
    <string name="ad_mob_app_id">ca-app-pub-1615119435047194~5095683894</string>
    <string name="interstitial_ad_1">ca-app-pub-1615119435047194/7629529654</string>
    <string name="interstitial_ad_2">ca-app-pub-1615119435047194/6049672910</string>
    <string name="interstitial_ad_3">ca-app-pub-1615119435047194/9457497746</string>
    <string-array name="interstitial_ads">
        <item>ca-app-pub-1615119435047194/7629529654</item>
        <item>ca-app-pub-1615119435047194/6049672910</item>
        <item>ca-app-pub-1615119435047194/9457497746</item>
    </string-array>
    <string name="test_interstitial_ads_id">ca-app-pub-3940256099942544/1033173712</string>
    <string-array name="yandex_ads">
        <item tools:ignore="TypographyDashes">R-M-711877-1</item>
        <item tools:ignore="TypographyDashes">R-M-711877-2</item>
        <item tools:ignore="TypographyDashes">R-M-711877-3</item>
    </string-array>
    <string name="yandex_demo_ad_id">demo-interstitial-yandex</string>
    <string name="text_default_set_name">default_set</string>
    <string name="text_current_set_name">current_set</string>
    <string name="ya_metrica_api_key" translatable="false">31a17f0a-3956-4e9f-8edf-debdc1059e68</string>
    <string name="action_settings">Settings</string>
    <string name="app_link">https://play.google.com/store/apps/details?id=</string>
    <string name="menu_strategy">Trading Strategy</string>
    <string name="menu_exit">Exit</string>
    <string name="text_general">Company</string>
    <string name="text_ticker">Ticker</string>
    <string name="text_filing_date">Filling date</string>
    <string name="text_date">Date</string>
    <string name="text_transaction_filing">Transaction type</string>
    <string name="text_purchase">Purchase</string>
    <string name="text_sale">Sale</string>
    <string name="text_traded_k">Transaction volume K$</string>
    <string name="text_min">Min</string>
    <string name="text_max">Max</string>
    <string name="text_officer">Officer</string>
    <string name="text_director">Director</string>
    <string name="text_10_owner">10% Owner</string>
    <string name="text_insider_title">Insider Title</string>
    <string name="text_group_by">Group by</string>
    <string name="text_group_and_sort">Grouping and sorting</string>
    <string name="text_sort_by">Sort by</string>
    <string name="text_trade_date">Transaction date</string>
    <string name="text_trading_screen">Insider trading reports</string>
    <string name="text_deal_value">Volume, $</string>
    <string name="text_company_name">Company</string>
    <string name="text_date_20_20_2020">2020–04–22 09:22:09</string>
    <string name="text_p_purchase">P - Purchase</string>
    <string name="text_10000000">10000000</string>
    <string name="text_insider_name">Insider\'s Name</string>
    <string name="text_nothing_found">Nothing found</string>
    <string name="text_change_parameters">Try changing your search parameters</string>
    <string name="text_back_to_search">Change the search parameters</string>
    <string name="text_0">0</string>
    <string name="text_results">Found</string>
    <string name="text_deal_details">Transaction Details</string>
    <string name="discription_text_to_notification">Daily notifications about transactions that have occurred on American exchanges</string>
    <string name="text_title_home">Search for SEC Form 4</string>
    <string name="text_trading_strategy">Trading Strategy</string>
    <string name="text_exit">Exit</string>
    <string name="text_title_trade_type">Type of transaction</string>
    <string name="text_title_price">Price, $</string>
    <string name="text_title_qty">Number of stocks in the transaction</string>
    <string name="text_title_owned">Number stocks in ownership</string>
    <string name="delta_own_title">Growth/Loss, %</string>
    <string name="value_title">Transaction volume,  $</string>
    <string name="text_deals_for_7_days">Transactions in 7 days</string>
    <string name="text_latest_purchases_1">Purchases over 1 mill. $</string>
    <string name="text_latest_purchases_5">Purchases over 5 mill. $</string>
    <string name="text_data_not_avalible">Data is not available, please, try later</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_ok">OK</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_donate">Hi!\nIf this app has helped you earn money…, you can support my project by making a small donation.</string>
    <string name="text_thanks">Any donation disables advertising.\n Thank you for using the app</string>
    <string name="text_select_sum">Select the amount:</string>
    <string name="text_to_support">Donate</string>
    <string name="text_support_project">Support the project</string>
    <string name="text_purchase_canceled">The transaction has been canceled. I\'m sorry you changed your mind</string>
    <string name="text_thanks_for_donating">Thank you for your support!!!</string>
    <string-array name="ticker_list">
        <item>AA</item>
        <item>BA</item>
        <item>BAC</item>
        <item>CAT</item>
    </string-array>
    <string-array name="list_for_filing_date">
        <item>For all the time</item>
        <item>For the last day</item>
        <item>For the last 2 days</item>
        <item>For the last 3 days</item>
        <item>For the last week</item>
        <item>For the last 2 weeks</item>
        <item>For the last month</item>
        <item>For the last 2 months</item>
        <item>For the last 3 months</item>
        <item>For the last 6 months</item>
        <item>For the last year</item>
        <item>For the last 2 years</item>
        <item>For the last 4 years</item>
    </string-array>
    <string-array name="list_for_grouping">
        <item>Filing date</item>
        <item>Company</item>
    </string-array>
    <string-array name="list_for_sorting">
        <item>Filing date</item>
        <item>Transaction date</item>
        <item>Ticker</item>
        <item>Transaction volume</item>
    </string-array>
    <string-array name="donate_sum">
        <item>50</item>
        <item>100</item>
        <item>200</item>
    </string-array>
    <string name="text_insider">Insider:</string>
    <string name="text_company">Company:</string>
    <string name="text_financial_support">Make a donation</string>
    <string name="text_watch_ads">View ads</string>
    <string name="title_trading_screen">Trading Screen</string>
    <string name="text_purchases_more_1">Purchases over 1 mill.$ per week</string>
    <string name="text_purchases_more_5">Purchases over 5 mill.$ per week</string>
    <string name="text_latest_sales_1">Sales of more than 1 mill.$</string>
    <string name="text_latest_sales_5">Sales of more than 5 mill.$</string>
    <string name="text_sales_more_1">Sales of more than 1 mill.$ per week</string>
    <string name="text_sales_more_5">Sales of more than 5 mill.$ per week</string>
    <string name="text_read">Read</string>
    <string name="text_hi">Hi!</string>
    <string name="text_strategy_dialog_1">This application is developed based on articles published in Forex Magazine called "CFD on Stocks. Trading with smart money"</string>
    <string name="text_strategy_dialog_2">You can read a full review of these articles describing the trading strategy in this section.</string>
    <string name="text_set_search_name">Enter a search name</string>
    <string name="text_saving_search">Saving search parameters</string>
    <string name="text_save">Save</string>
    <string name="text_my_search">My Searches</string>
    <string name="text_default_search">Default Search</string>
    <string name="text_my_search_requests">My Search queries</string>
    <string name="text_inet_not_connection">There is no internet connection. Connect to the network and try again</string>
    <string name="text_all_tickers">All tickers</string>
    <string name="text_delete">Delete</string>
    <string name="text_deals_for_3_days">Transactions in the last 3 days</string>
    <string name="text_close">Close</string>
    <string name="text_not_show_again">Don\'t show it anymore</string>
    <string name="text_pur_more1_for_3">Purchases over 1 mill.$ for 3 days</string>
    <string name="text_pur_more5_for_3">Purchases over 5 mill.$ for 3 days</string>
    <string name="text_sale_more1_for_3">Sales of more than 1 mill.$ for 3 days</string>
    <string name="text_sale_more5_for_3">Sales of more than 5 mill.$ for 3 days</string>
    <string name="text_pur_more1_for_14">Purchases over 1 mill.$ for 14 days</string>
    <string name="text_pur_more5_for_14">Purchases over 5 mill.$ for 14 days</string>
    <string name="text_sale_more1_for_14">Sales of more than 1 mill.$ for 14 days</string>
    <string name="text_sale_more5_for_14">Sales of more than 5 mill.$ for 14 days</string>
    <string name="text_accept">I agree</string>
    <string name="text_user_agreement">User agreement</string>
    <string name="text_share_using">Share using</string>
    <string name="text_developer_name">Development: RenatSayf</string>
    <string name="text_developer_email">E-mail: renatsayf@gmail.com</string>
    <string name="text_evaluate">Estimate</string>
    <string name="privacy_policy_text_link">Privacy policy</string>
    <string name="privacy_policy_link">https://sites.google.com/view/stock-insider/</string>
    <string name="text_share">To share</string>
    <string name="text_about_app">About the app</string>
    <string name="text_insider_deals">Insider Deals</string>
    <string name="text_trading_by_company">Trading on the company\'s stocks</string>
    <string name="text_search_param_is_saved">Search parameters are saved</string>
    <string name="text_no_search_request">No saved search queries</string>
    <string name="text_deals_for_14_days">Transactions in 14 days</string>
    <string name="text_tracking_list">Tracking List</string>
    <string name="text_tracking_params">Tracking Parameters</string>
    <string name="text_company_list">Company list</string>
    <string name="text_ticker_already_exists">Such a ticker is already in the list</string>
    <string name="text_search_already_exists">There is already such a search query</string>
    <string name="hint_request_name">Enter the name of the request</string>
    <string name="title_request_name">Request name</string>
    <string name="text_generate">Generate</string>
    <string name="text_failed_to_save">Failed to save changes</string>
    <string name="text_show">Show</string>
    <string name="text_deletion_error">Deletion Error</string>
    <string name="text_insider_info">Insider Information</string>
    <string name="text_company_info">Company Information</string>
    <string name="text_company_deals">Company transactions</string>
    <string name="text_add_to_tracking">Add to the tracking list</string>
    <string name="text_do_track">To observe</string>
    <string name="text_tracking_new_search">Tracking. New search</string>
    <string name="text_tracking_editing">Tracking. Editing</string>
    <string name="text_tracking_viewing">Tracking. Viewing</string>
    <string name="text_tracking_enabled">Tracking enabled</string>
    <string name="text_tracking_disabled">Tracking is disabled</string>
    <string name="text_deletion_confirm">Confirm the deletion</string>
    <string name="text_order_by_asc">Order by ASC</string>
    <string name="text_order_by_desc">Order by DESC</string>
    <string name="text_do_not_group">Do not group</string>
</resources>