<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.renatsayf.stockinsider.ui.main.MainFragment"
        android:label="@string/text_title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_resultFragment"
            app:destination="@id/nav_result" />
        <action
            android:id="@+id/action_nav_home_to_nav_strategy"
            app:destination="@id/nav_strategy" />
        <action
            android:id="@+id/action_nav_home_to_trackingListFragment"
            app:destination="@id/trackingListFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_strategy"
        android:name="com.renatsayf.stockinsider.ui.strategy.StrategyFragment"
        android:label="@string/menu_strategy"
        tools:layout="@layout/fragment_strategy" />


    <fragment
        android:id="@+id/nav_result"
        android:name="com.renatsayf.stockinsider.ui.result.ResultFragment"
        android:label="@string/text_trading_screen"
        tools:layout="@layout/fragment_result">

        <action
            android:id="@+id/action_resultFragment_to_dealFragment"
            app:destination="@id/nav_deal" />

    </fragment>

    <fragment
        android:id="@+id/nav_deal"
        android:name="com.renatsayf.stockinsider.ui.deal.DealFragment"
        android:label="@string/text_deal_details"
        tools:layout="@layout/fragment_deal">
        <action
            android:id="@+id/action_nav_deal_to_insiderTradingFragment"
            app:destination="@id/nav_insider_trading" />
        <action
            android:id="@+id/action_nav_deal_to_tradingByTickerFragment"
            app:destination="@id/nav_trading_by_ticker" />
    </fragment>

    <fragment
        android:id="@+id/nav_insider_trading"
        android:name="com.renatsayf.stockinsider.ui.result.insider.InsiderTradingFragment"
        android:label="@string/text_insider_deals"
        tools:layout="@layout/insider_trading_fragment" />
    <fragment
        android:id="@+id/nav_trading_by_ticker"
        android:name="com.renatsayf.stockinsider.ui.result.ticker.TradingByTickerFragment"
        android:label="@string/text_trading_by_company"
        tools:layout="@layout/trading_by_ticker_fragment" />
    <fragment
        android:id="@+id/nav_about_app"
        android:name="com.renatsayf.stockinsider.ui.about_app.AboutAppFragment"
        android:label="@string/text_about_app"
        tools:layout="@layout/about_app_fragment" />
    <fragment
        android:id="@+id/trackingListFragment"
        android:name="com.renatsayf.stockinsider.ui.tracking.TrackingListFragment"
        android:label="tracking_list_fragment"
        tools:layout="@layout/tracking_list_fragment" />


</navigation>