<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:visible="false"/>

    <item
        android:id="@+id/action_log_file"
        android:orderInCategory="2"
        android:title="Create log's file"
        app:showAsAction="never"
        android:visible="false"/>

    <item
        android:id="@+id/action_my_search"
        android:title="@string/text_my_search"
        android:orderInCategory="3"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_default_search"
        android:title="@string/text_default_search"
        app:showAsAction="never"
        android:orderInCategory="4"/>

</menu>
