<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_stock_house_black_24dp"
            android:title="@string/text_title_home"
            />
        <item
            android:id="@+id/nav_strategy"
            android:icon="@drawable/ic_trending_up_black_24dp"
            android:title="@string/text_trading_strategy" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_power_black_24dp"
                android:title="@string/text_exit" />

        </menu>
    </item>

</menu>
