<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/bg_dialog_default">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:background="@color/colorPrimary" >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/text_group_and_sort"
            android:textSize="20sp"
            android:textColor="@color/colorGold"
            />

        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/tv_title"
            app:layout_constraintBottom_toBottomOf="@+id/tv_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_clear_grey"
            android:background="@drawable/bg_ripple_round_transparent"
            android:contentDescription="@string/text_close" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:text="@string/text_group_by"
        android:textColor="@color/colorWhite"
        />

    <RadioGroup
        android:id="@+id/rg_grouping"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="32dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp">

        <RadioButton
            android:id="@+id/rb_not_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:buttonTint="@color/colorWhite"
            android:layoutDirection="rtl"
            android:minHeight="48dp"
            android:text="@string/text_filing_date"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:buttonTint="@color/colorWhite"
            android:layoutDirection="rtl"
            android:minHeight="48dp"
            android:text="@string/text_company"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_insider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/text_insider"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:buttonTint="@color/colorWhite"
            android:layoutDirection="rtl"/>

    </RadioGroup>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0.4dp"
        android:background="@color/colorWhite"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:text="@string/text_sort_by"
        android:textColor="@color/colorWhite"
        />

    <RadioGroup
        android:id="@+id/rg_sorting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="32dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        >

        <RadioButton
            android:id="@+id/rb_filling_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/text_filing_date"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:buttonTint="@color/colorWhite"
            android:layoutDirection="rtl"/>

        <RadioButton
            android:id="@+id/rb_trade_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/text_trade_date"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:buttonTint="@color/colorWhite"
            android:layoutDirection="rtl"/>

        <RadioButton
            android:id="@+id/rb_ticker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/text_ticker"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:buttonTint="@color/colorWhite"
            android:layoutDirection="rtl"/>

        <RadioButton
            android:id="@+id/rb_deal_volume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/text_deal_value"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:buttonTint="@color/colorWhite"
            android:layoutDirection="rtl"/>

    </RadioGroup>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_by_asc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_ripple_corners_0"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/text_order_by_asc"
            android:textColor="@color/colorWhite"
            android:drawableStart="@drawable/ic_double_arrow_up"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_by_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_order_by_desc"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:padding="12dp"
            android:background="@drawable/bg_ripple_corners_0"
            android:clickable="true"
            android:focusable="true"
            app:drawableEndCompat="@drawable/ic_double_arrow_down" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>