<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:background="@color/colorPrimary"
    tools:context=".donate.DonateFragment">

    <TextView
        android:id="@+id/doDonateTView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/text_donate"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textColor="@color/colorGold"
        />

    <TextView
        android:id="@+id/thanksTView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/doDonateTView"
        android:layout_marginTop="20dp"
        android:text="@string/text_thanks"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@color/colorLightGreen"
        />

    <TextView
        android:id="@+id/selectSumTView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/thanksTView"
        android:layout_marginTop="20dp"
        android:text="@string/text_select_sum"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"
        />

    <Spinner
        android:id="@+id/sumSpinnerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/selectSumTView"
        android:padding="10dp"
        android:layout_marginBottom="50dp"
        android:entries="@array/donate_sum"/>

    <View
        android:id="@+id/barrier"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@id/sumSpinnerView"/>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btnDoDonate"
        android:text="@string/text_cancel" />

    <Button
        android:id="@+id/btnDoDonate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btnCancel"
        android:text="@string/text_to_support" />

</androidx.constraintlayout.widget.ConstraintLayout>