<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog_default"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_request_name"
        android:padding="16dp"
        android:textSize="20sp"
        android:textColor="@color/colorGold"
        android:background="@color/colorPrimary"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/et_set_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp"
            android:paddingEnd="36dp"
            style="@style/appEditTextStyle"
            android:hint="@string/hint_request_name"
            android:autofillHints="name"
            android:inputType="textMultiLine"
            android:lines="2"/>

        <ImageView
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/ic_clear_grey"
            android:contentDescription="@string/app_name"
            app:layout_constraintTop_toTopOf="@+id/et_set_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/et_set_name"
            />

        <Button
            android:id="@+id/btn_generate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/et_set_name"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/AppRectangularDarkButton"
            android:padding="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/text_generate"
            android:textSize="20sp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_cancel"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:textColor="@color/colorWhite"
            android:padding="32dp"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0.1dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_save"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:textColor="@color/colorWhite"
            android:padding="32dp"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>



