<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp">

    <TextView
        android:id="@+id/section_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|top"
        android:layout_marginStart="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/text_general"
        android:textSize="18sp"
        android:textColor="@color/colorSectionHeader"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/text_ticker"
        android:textColor="@color/colorSectionItemTitle"
        app:layout_constraintTop_toBottomOf="@+id/section_title"
        app:layout_constraintStart_toStartOf="parent"
        />

    <AutoCompleteTextView
        android:id="@+id/ticker_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:autofillHints=""
        android:completionThreshold="1"
        android:inputType="textAutoComplete|textMultiLine"
        android:labelFor="@id/ticker_ET"
        android:paddingStart="5dp"
        android:paddingEnd="30dp"
        android:textLocale="@string/locale_en_US"
        tools:targetApi="o"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/title"/>

    <ImageView
        android:id="@+id/clearTicketImView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center_vertical"
        android:src="@drawable/ic_clear_grey"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
