<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/noResultLayout"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/nothingFoundTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_nothing_found"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/recommendationsTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nothingFoundTV"
        android:gravity="center"
        android:text="@string/text_change_parameters"
        android:textSize="18sp"
        android:textColor="@color/colorGold"
        android:padding="20dp"/>

    <Button
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/text_back_to_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recommendationsTV"
        app:layout_constraintVertical_bias="1"
        style="@style/AppRectangularDarkButton"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
